--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "node extractor.js & node server.js"
+    "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "playwright": "^1.53.0"
+    "express": "^4.19.2",
+    "node-fetch": "^2.6.7"
   }
 }
